--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Jonathan Reyes">
+    <meta name="description" content="Un mini CV practica con nuevas etiquetas y buenas practicas">
+    <link rel="icon" href="./assets/img/curriculum-vitae.png">
+    <title>Mini CV | Jonathan Reyes</title>
 </head>
 <body>
-    
+    <h1>Hola</h1>
 </body>
 </html>
