--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO -->
     <meta name="author" content="Jonathan Reyes">
     <meta name="description" content="Un mini CV practica con nuevas etiquetas y buenas practicas">
+    <meta name="keywords" content="CV, HTML, Buenas-practicas, SEO,">
+
+    <!-- Open Graph, productos de meta (fb insta whts...) -->
+    <meta property = "og:title" content="Mini portafolio Jonathan Reyes">
+    <meta property = "og:description" content="Un mini CV practica con nuevas etiquetas y buenas practicas">
+    <meta property = "og:image" content="https://media.tenor.com/qKa17xOhbGMAAAAM/cv-best-cv.gif">
+    <meta property = "og:url" content="https://jonyr3g0.github.io/practica-metadatos/">
+    <meta property = "og:type" content="profile">
+
     <link rel="icon" href="./assets/img/curriculum-vitae.png">
     <title>Mini CV | Jonathan Reyes</title>
 </head>
