fixing image open graph

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph, productos de meta (fb insta whts...) -->
     <meta property = "og:title" content="Mini portafolio Jonathan Reyes">
     <meta property = "og:description" content="Un mini CV practica con nuevas etiquetas y buenas practicas">
-    <meta property = "og:image" content="https://media.tenor.com/qKa17xOhbGMAAAAM/cv-best-cv.gif">
+    <meta property = "og:image" content="https://github.com/JonyR3G0/practica-metadatos/blob/main/assets/img/yo.jpeg">
     <meta property = "og:url" content="https://jonyr3g0.github.io/practica-metadatos/">
     <meta property = "og:type" content="profile">
 
