Subo actualizacion para SEO y accesibilidad

--- a/index.html
+++ b/index.html
@@ -1,25 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO -->
-    <meta name="author" content="Jonathan Reyes">
-    <meta name="description" content="Un mini CV practica con nuevas etiquetas y buenas practicas">
-    <meta name="keywords" content="CV, HTML, Buenas-practicas, SEO,">
+    <meta name="author" content="Jonathan Reyes" />
+    <meta
+      name="description"
+      content="Un mini CV practica con nuevas etiquetas y buenas practicas"
+    />
+    <meta name="keywords" content="CV, HTML, Buenas-practicas, SEO," />
 
     <!-- Open Graph, productos de meta (fb insta whts...) -->
-    <meta property = "og:title" content="Mini portafolio Jonathan Reyes">
-    <meta property = "og:description" content="Un mini CV practica con nuevas etiquetas y buenas practicas">
-    <meta property = "og:image" content="https://github.com/JonyR3G0/practica-metadatos/blob/main/assets/img/yo.jpeg">
-    <meta property = "og:url" content="https://jonyr3g0.github.io/practica-metadatos/">
-    <meta property = "og:type" content="profile">
+    <meta property="og:title" content="Mini portafolio Jonathan Reyes" />
+    <meta
+      property="og:description"
+      content="Un mini CV practica con nuevas etiquetas y buenas practicas"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/JonyR3G0/practica-metadatos/blob/main/assets/img/yo.jpeg"
+    />
+    <meta
+      property="og:url"
+      content="https://jonyr3g0.github.io/practica-metadatos/"
+    />
+    <meta property="og:type" content="profile" />
 
-    <link rel="icon" href="./assets/img/curriculum-vitae.png">
+    <!-- Para X/twiter cards -->
+    <!-- Para especificar como desplegar -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Perfil profesional de Jonh Reyes" />
+    <meta
+      name="twitter:description"
+      content="Un mini CV practica con nuevas etiquetas y buenas practicas"
+    />
+    <meta
+      name="twitter:image"
+      content="https://jonyr3g0.github.io/practica-metadatos/"
+    />
+
+    <link rel="icon" href="./assets/img/curriculum-vitae.png" />
     <title>Mini CV | Jonathan Reyes</title>
-</head>
-<body>
-    <h1>Hola</h1>
-</body>
+  </head>
+  <body>
+    <header><h1>Perfil de Jonathan Reyes</h1></header>
+
+    <nav aria-label="Enlace de redes sociales de Jonathan Reyes">
+      <ul>
+        <!-- El aria label se puede indicar a casi todas las etiquetas y nos sirve para indicarle el proposito a un lector de pagina para hacerla mas accecible -->
+        <li><a href="#">Linkedin</a></li>
+        <!-- En el caso de quere integrarla aqui seri -->
+        <li><a href="#">GitHub</a></li>
+        <li><a href="#">Twitter</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
