--- a/index.html
+++ b/index.html
@@ -146,13 +146,21 @@
 
       <aside aria-labelledby="contacto-t">
         <h2 id="contacto-t">Contacto</h2>
-        <p>Si deseas conectar conmigo para un proyecto o una colaboracion contactame en:</p>
+        <p>
+          Si deseas conectar conmigo para un proyecto o una colaboracion
+          contactame en:
+        </p>
         <address>
-            <!-- esta etiqueta sirve para labelear direcciones como email -->
-            <p>Email <a href="mailto:aaaaaa@gmail.com">aaaaaa@gmail.com</a></p>
-            <p>333 3333 333</p>
+          <!-- esta etiqueta sirve para labelear direcciones como email -->
+          <p>Email <a href="mailto:aaaaaa@gmail.com">aaaaaa@gmail.com</a></p>
+          <p>333 3333 333</p>
         </address>
       </aside>
     </main>
+
+    <footer>
+      <p>&copy; 2024 Todos los derechos reservados, Jonathan Reyes</p>
+    </footer>
+    
   </body>
 </html>
